--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.2",
     "postcss": "^8.4.21",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.7"
   }
 }
